--- a/src/css/product.css
+++ b/src/css/product.css
@@ -5,7 +5,7 @@ img {
 
 li {
   list-style-type: none;
-  padding: 50px;
+  padding: 30px;
   margin: 5px;
   display: flex;
   flex-direction: column;
@@ -13,6 +13,7 @@ li {
   border-radius: 2px;
   background-color: rgb(255, 255, 255);
   width: 150px;
+  position: relative;
 }
 
 li:hover {
@@ -29,6 +30,9 @@ h2 {
 
 button {
   padding: 8px 30px;
+  position: absolute;
+  bottom: 10px;
+  right: 22%;
 }
 
 .price {
